commit con scsss

--- a/desarrollo web/index.html
+++ b/desarrollo web/index.html
@@ -42,7 +42,7 @@
             </nav>
         </header>
         <div class="imagen__principal">
-            <img class="imagen__principal__cabecera" src="./imagenes/bg-medicinainterna.png" alt="">
+            <img class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGMEAQG8HoeRxU_Ok_GL0I0QM5XSJ0PjR_8g&usqp=CAU" alt="">
         </div>
         <div class="servicios">
             <h1>NUESTROS SERVICIOS</h1>
