--- a/desarrollo web/paginas/servicios.html
+++ b/desarrollo web/paginas/servicios.html
@@ -38,6 +38,7 @@
             </nav>
         </header>
         <h1>Nuestros Servicios</h1>
+        <img class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReOukvMnIfb6MStALMefov5fNAKNX5w-K_mA&usqp=CAU" alt="">
         <h3 class="servicios__subtitulo">Kinesiología y Rehabilitación</h3>
 
         <section class="servicios__tratamientos">
