--- a/desarrollo web/paginas/contacto.html
+++ b/desarrollo web/paginas/contacto.html
@@ -39,33 +39,17 @@
             </nav>
         </header>
         <h1>contactenos</h1>
-        <img src="./imagenes/bg-medicinainterna.png" alt="">
-        <div class="formulario">
-            <h2> Complete el formulario y nos contactaremos a la brevedad</h2>
-            <form action="">
 
-                <div>
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" name="" id="nombre">
-                </div>
-                <div>
-                    <label for="apellido">Apellido:</label>
-                    <input type="text" name="" id="apellido">
-                </div>
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="text" name="" id="email">
-                </div>
-
-                <div>
-                    <textarea name="comentarios" id="" cols="50" rows="10"> deje su consulta</textarea>
-                </div>
-            </form>
+        <div class="contenedor__imagen__contacto">
+            <img class="imagen__principal__cabecera" src="../imagenes/comprobacion-medica-piernas-centro-fisioterapia.jpg" alt="">
+            <div class="texto__imagen__contacto">
+                <h2> Complete el formulario y nos contactaremos a la brevedad</h2>
+            </div>
         </div>
 
 
     </main>
-    <footer>
+    <footer class="pie__contacto">
         <h4>todos los derechos reservados a Pablo Di Monte</h4>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
