--- a/desarrollo web/paginas/faqs.html
+++ b/desarrollo web/paginas/faqs.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>galeria</title>
-    <link rel="shortcut icon" href="../imagenes/logo_kios1.jpg" type="image/x-icon">
+    <meta name="keywords" content="kikinesiologia. osteopatia. reeducacion postural. tratamientos">
+    <meta name="description" content="kinesiologia. osteopatia. reeducacion postural. tratamientos">
+    <title>Faqs</title>
+    <link rel="shortcut icon" href="../imagenes/logo_kios1.webp" type="image/x-icon">
     <!-- google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,87 +18,147 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
     <!-- cdn bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+    <!-- CDN AOS css-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!--CDN CSS STILE-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
     <main>
-        <header>
-            <a href="./index.html">
-                <img src="../imagenes/logo_kios1.jpg" alt="" id="logo_principal" < href="../index.html">
-            </a>
-
-            <nav>
-                <ul class="navegacion">
-                    <li><a href="../index.html ">Home</a></li>
-                    <li><a href="./servicios.html ">Servicios</a></li>
-                    <li><a href="./modalidad.html">Modalidad</a></li>
-                    <li><a href="./faqs.html">FAQ´s</a> </li>
-                    <li><a href="./contacto.html">Contacto</a> </li>
-                </ul>
-
+        <header data-aos="fade-down">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <a href="../index.html">
+                    <img src="../imagenes/logo_kios1.webp" alt="logo kios" id="logo_principal" </img>
+                </a>
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html">Home</a>
+                    <a class="navbar-brand" href="./servicios.html">Servicios</a>
+                    <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
+                    <a class="navbar-brand" href="./faqs.html">Faq´s</a>
+                    <a class="navbar-brand" href="./contacto.html">Contacto</a>
+                </div>
             </nav>
 
+
         </header>
-        <img class="cabecera" src="./imagenes/bg-medicinainterna.png" alt="" width="">
+        <img data-aos="fade-down" class="imagen__principal__cabecera" src="../imagenes/bg-medicinainterna.png " alt="cambiar imagen " width=" ">
 
-        <h1> Preguntas frecuentes:</h1>
+        <h1 data-aos="fade-down">Que podemos tratar con la Osteopatia</h1>
+        <section class="tratamientos ">
+            <article data-aos="zoom-in-down ">
+                <h4> ¿Puedo tratar la Cervicalgia con Osteopatia?</h4>
+                <div class="seccion__preguntas ">
+                    <div class="seccion__preguntas__imagen ">
+                        <img src="https://tse4.mm.bing.net/th?id=OIP.8bLrbkjhMGo1lRZbBMFv0AHaGn&pid=Api&P=0 " alt=" dolor columna cervical ">
+                    </div>
+                    <div class="preguntas__texto ">
+                        <p>La osteopatía puede ser beneficiosa para tratar el dolor de la columna cervical, especialmente si está relacionado con desequilibrios musculoesqueléticos o tensiones en los tejidos blandos. Los osteópatas están capacitados para
+                            evaluar la causa subyacente del dolor de cuello y realizar una evaluación completa y crear un plan de tratamiento personalizado para abordar tus necesidades y utilizar técnicas manuales específicas para abordar el problema.
+                            Algunas de las posibles causas del dolor de cuello que pueden tratarse con osteopatía incluyen:<strong>Problemas en las articulaciones:</strong>Si hay disfunciones en las articulaciones del cuello, los osteópatas pueden realizar
+                            manipulaciones articulares suaves para mejorar la movilidad y aliviar la tensión en las estructuras afectadas.
 
-        <section>
-            <h2>podrá encontrar respuestas de como realizar su consulta on-line</h2>
-            <div>
-                <h4> pregunta 1:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, tempore. Odit nemo repellendus nostrum obcaecati accusamus fugit officiis, dolore delectus ducimus facere deleniti laborum excepturi blanditiis recusandae aliquam cum cupiditate!
-                    tur adipisicing elit. Laborum nihil rem, quibusdam voluptatum eos numquam ratione ipsum exercitationem sunt labore. Quo minus doloribus dicta totam ipsam deleniti ab odit consequuntur? Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quaerat doloremque unde excepturi voluptate! Consequuntur sint, deleniti ratione neque harum debitis, velit, eveniet placeat repellat eligendi quae? Dolorum consequuntur repellat nihil.
+                        </p>
+                        <p>
+                            Tensión muscular: La tensión excesiva o los desequilibrios musculares en el cuello pueden generar dolor. Los osteópatas pueden utilizar técnicas de masaje y estiramientos suaves para liberar la tensión y restaurar la función muscular normal.Problemas
+                            posturales: Una mala postura, como estar sentado frente a una computadora durante largos períodos, puede contribuir al dolor de cuello. Los osteópatas pueden evaluar tu postura y recomendar ejercicios y cambios posturales para
+                            aliviar la tensión y mejorar la alineación. Es importante destacar que cada persona es única y la efectividad del tratamiento de osteopatía para el dolor de cuello puede variar. En algunos casos, puede ser necesario combinar
+                            la osteopatía con otros enfoques, como la fisioterapia o el ejercicio terapéutico, para obtener mejores resultados. Recuerda que siempre es importante consultar con un profesional de la salud antes de iniciar cualquier tratamiento
+                            para el dolor de cuello o cualquier otra condición médica
+                        </p>
+                    </div>
+
+                </div>
+            </article>
+            <article data-aos="zoom-in-left ">
+                <h4>¿ Puedo tratar mi dolor lumbar ?</h4>
+                <div class="seccion__preguntas ">
+                    <div class="seccion__preguntas__imagen "><img src="https://tse1.explicit.bing.net/th?id=OIP.atmIk8NTin3tTmE-gwHH7AHaEA&pid=Api&P=0 " alt="imagen_lumbalgia ">
+                    </div>
+                    <div class="preguntas__texto ">
+                        <p> Sí, la osteopatía puede ser beneficiosa para tratar la lumbalgia, que es el dolor en la parte baja de la espalda. La osteopatía se enfoca en el sistema musculoesquelético y busca identificar y corregir desequilibrios que puedan
+                            contribuir al dolor lumbar. Durante una sesión de osteopatía, el osteópata realizará una evaluación para determinar la causa subyacente de la lumbalgia. Esto puede incluir una evaluación de la postura, la movilidad de la columna
+                            vertebral, las articulaciones y los tejidos blandos, así como la búsqueda de áreas de tensión o restricciones en el cuerpo. Luego, el osteópata utilizará técnicas manuales suaves para tratar la lumbalgia. Estas técnicas pueden
+                            incluir manipulaciones articulares, estiramientos, masajes suaves y técnicas de movilización. El objetivo es mejorar la movilidad de la columna vertebral, aliviar la tensión muscular y corregir cualquier desequilibrio que pueda
+                            estar contribuyendo al dolor lumbar. Además del tratamiento en la consulta, es probable que el osteópata te brinde recomendaciones sobre ejercicios, cambios posturales y hábitos de vida
+                        </p>
+                    </div>
+
+                </div>
+                <p> saludables para ayudar a prevenir la recurrencia del dolor lumbar. Recuerda que cada caso es único y la efectividad de la osteopatía puede variar. Es importante trabajar en conjunto con un osteópata calificado y otros profesionales de
+                    la salud para desarrollar un plan de tratamiento integral y adecuado a tus necesidades individuales.
                 </p>
-            </div>
-            <div>
-                <h4> pregunta 2:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, tempore. Odit nemo repellendus nostrum obcaecati accusamus fugit officiis, dolore delectus ducimus facere deleniti laborum excepturi blanditiis recusandae aliquam cum cupiditate!
-                    tur adipisicing elit. Laborum nihil rem, quibusdam voluptatum eos numquam ratione ipsum exercitationem sunt labore. Quo minus doloribus dicta totam ipsam deleniti ab odit consequuntur? Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quaerat doloremque unde excepturi voluptate! Consequuntur sint, deleniti ratione neque harum debitis, velit, eveniet placeat repellat eligendi quae? Dolorum consequuntur repellat nihil.
-                </p>
-            </div>
-            <div>
-                <h4> pregunta 3:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, tempore. Odit nemo repellendus nostrum obcaecati accusamus fugit officiis, dolore delectus ducimus facere deleniti laborum excepturi blanditiis recusandae aliquam cum cupiditate!
-                    tur adipisicing elit. Laborum nihil rem, quibusdam voluptatum eos numquam ratione ipsum exercitationem sunt labore. Quo minus doloribus dicta totam ipsam deleniti ab odit consequuntur? Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quaerat doloremque unde excepturi voluptate! Consequuntur sint, deleniti ratione neque harum debitis, velit, eveniet placeat repellat eligendi quae? Dolorum consequuntur repellat nihil.
-                </p>
-            </div>
-            <div>
-                <h4> pregunta 4:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, tempore. Odit nemo repellendus nostrum obcaecati accusamus fugit officiis, dolore delectus ducimus facere deleniti laborum excepturi blanditiis recusandae aliquam cum cupiditate!
-                    tur adipisicing elit. Laborum nihil rem, quibusdam voluptatum eos numquam ratione ipsum exercitationem sunt labore. Quo minus doloribus dicta totam ipsam deleniti ab odit consequuntur? Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quaerat doloremque unde excepturi voluptate! Consequuntur sint, deleniti ratione neque harum debitis, velit, eveniet placeat repellat eligendi quae? Dolorum consequuntur repellat nihil.
-                </p>
-            </div>
-            <div>
-                <h4> pregunta 5:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, tempore. Odit nemo repellendus nostrum obcaecati accusamus fugit officiis, dolore delectus ducimus facere deleniti laborum excepturi blanditiis recusandae aliquam cum cupiditate!
-                    tur adipisicing elit. Laborum nihil rem, quibusdam voluptatum eos numquam ratione ipsum exercitationem sunt labore. Quo minus doloribus dicta totam ipsam deleniti ab odit consequuntur? Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quaerat doloremque unde excepturi voluptate! Consequuntur sint, deleniti ratione neque harum debitis, velit, eveniet placeat repellat eligendi quae? Dolorum consequuntur repellat nihil.
-                </p>
-            </div>
-            <div>
-                <h4> pregunta 6:</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, tempore. Odit nemo repellendus nostrum obcaecati accusamus fugit officiis, dolore delectus ducimus facere deleniti laborum excepturi blanditiis recusandae aliquam cum cupiditate!
-                    tur adipisicing elit. Laborum nihil rem, quibusdam voluptatum eos numquam ratione ipsum exercitationem sunt labore. Quo minus doloribus dicta totam ipsam deleniti ab odit consequuntur? Lorem ipsum dolor sit amet, consectetur adipisicing
-                    elit. Quaerat doloremque unde excepturi voluptate! Consequuntur sint, deleniti ratione neque harum debitis, velit, eveniet placeat repellat eligendi quae? Dolorum consequuntur repellat nihil.
-                </p>
-            </div>
+
+
+            </article>
+            <article data-aos="zoom-in-right ">
+                <h4>sufo de gastritis.. ¿la osteopatia me puede ayudar?</h4>
+                <div class="seccion__preguntas ">
+                    <div class="seccion__preguntas__imagen "><img src="https://tse2.mm.bing.net/th?id=OIP.Hkr45U13pRIgjKCDirgNJAHaEK&pid=Api&P=0 " alt=" gastritis ">
+                    </div>
+                    <div class="preguntas__texto ">
+                        <p>
+                            La osteopatía puede ser beneficiosa como un enfoque complementario en el manejo de la gastritis. La osteopatía no puede curar la gastritis, pero puede ayudar a aliviar algunos de los síntomas asociados y mejorar el bienestar general. La gastritis es la
+                            inflamación del revestimiento del estómago, y sus causas pueden variar, incluyendo infecciones, el uso prolongado de medicamentos antiinflamatorios no esteroideos (AINE), estrés, entre otros factores.En el contexto de la osteopatía,
+                            un osteópata puede trabajar en conjunto con el paciente para abordar los aspectos relacionados con el sistema musculoesquelético y el sistema nervioso. El objetivo es ayudar a reducir la tensión y el estrés en el cuerpo, mejorar
+                            la circulación y promover un estado de relajación general. Esto puede tener un efecto positivo en la salud digestiva y en la respuesta al estrés, lo que a su vez puede ayudar a reducir los síntomas de la gastritis, como la
+                            sensación de acidez o el malestar estomacal. Es importante destacar que la osteopatía en el manejo de la gastritis debe ser utilizada como un complemento a la atención médica convencional.
+                        </p>
+                    </div>
+
+                </div>
+
+            </article>
+            <article>
+                <h4 id="tratamientoOsteopatia ">¿Puedo tratar el estres con Osteopatia?</h4>
+                <div class="seccion__preguntas ">
+                    <div class="seccion__preguntas__imagen "><img src=" https://tse3.mm.bing.net/th?id=OIP.FwHVnQGBXn_JozjCRWSyJwHaE4&pid=Api&P=0 " alt="estres ">
+                    </div>
+                    <div class="preguntas__texto ">
+                        <p> Sí, la osteopatía puede ser beneficiosa en el manejo del los sintomas del estrés. Si bien el estrés es una respuesta compleja del cuerpo a diversas situaciones, la osteopatía puede ayudar a aliviar algunos de los efectos negativos
+                            del estrés en el cuerpo y promover un estado de relajación general. Cuando estamos estresados, nuestro cuerpo puede experimentar tensión muscular, alteraciones en la respiración y cambios en la postura. Estos cambios pueden
+                            tener un impacto en el sistema musculoesquelético y en otros sistemas del cuerpo, como el sistema nervioso y el sistema circulatorio. El osteópata puede ayudar a liberar la tensión muscular, mejorar la circulación y promover
+                            un estado de relajación física y mental.Además, la osteopatía puede abordar la conexión entre el cuerpo y la mente, reconociendo que el estrés puede tener un impacto en ambos. Al trabajar en conjunto con un osteópata, puedes
+                            recibir apoyo en la gestión del estrés, aprender técnicas de respiración y relajación, y recibir recomendaciones sobre cambios en el estilo de vida que pueden ayudar a reducir el estrés.
+                        </p>
+                    </div>
+                </div>
+            </article>
 
 
         </section>
 
     </main>
-    <footer>
-        <h4>todos los derechos reservados</h4>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
 
+    <footer>
+        <div class="pie__pagina__texto ">
+            <p>Brindamos un servicio y acompañamiento totalmente personalizado,<br> para que juntos podamos llegar a los objetivos buscados y tener una mejor calidad de vida.</p>
+        </div>
+
+        <div class="pie__imagenes ">
+            <img src="https://tse4.mm.bing.net/th?id=OIP.363HIF5ekaMqqYj0Tmd3MwHaHa&pid=Api&P=0&h=180 " alt=" logo telefono ">11-6570-9512
+            <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt="globo ubicación ">Ñandubay 131,Ezeiza
+            <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt="globo ubicación ">Sixto Fernandez 614,Lomas de Zamora
+        </div>
+
+        <div class="pie__redes ">
+            <a href="# "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" logo instagram">instagram </a>
+            <a href="# "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter">twiter</a>
+        </div>
+
+
+    </footer>
+
+
+    </main>
+    <!--CDN BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe " crossorigin="anonymous "></script>
+    <!--CDN AOS CSS-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+    <script>
+        AOS.init();
+    </script>
+</body>
 
 </html>
