--- a/desarrollo web/paginas/contacto.html
+++ b/desarrollo web/paginas/contacto.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="contacto kios. contacto servicios">
+    <meta name="description" content="contacto kios. contacto osteopatia. contacto reerducacion poestural">
     <title>contacto</title>
-    <link rel="shortcut icon" href="../imagenes/logo_kios1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/logo_kios1.webp" type="image/x-icon">
     <!-- google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,43 +18,88 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
     <!-- cdn bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- CDN AOS css-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!--CDN CSS STILE-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
     <main>
-        <header>
-            <a class="logo" href="./index.html">
-                <img src="../imagenes/logo_kios1.jpg" alt="" id="logo_principal" <a href="../index.html"></a>
-            </a>
-
-            <nav>
-                <ul class="navegacion">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./servicios.html">Servicios</a></li>
-                    <li><a href="./modalidad.html">Modalidad</a></li>
-                    <li><a href="./faqs.html">FAQ´s</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
-
-                </ul>
-
+        <header data-aos="fade-down">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <a href="../index.html">
+                    <img src="../imagenes/logo_kios1.webp" alt="logo KIOS" id="logo_principal" </img>
+                </a>
+                <div class="container-fluid ">
+                    <a class="navbar-brand" href="../index.html">Home</a>
+                    <a class="navbar-brand" href="./servicios.html">Servicios</a>
+                    <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
+                    <a class="navbar-brand" href="./faqs.html">Faq´s</a>
+                    <a class="navbar-brand" href="./contacto.html">Contacto</a>
+                </div>
             </nav>
-        </header>
-        <h1>contactenos</h1>
 
+        </header>
         <div class="contenedor__imagen__contacto">
-            <img class="imagen__principal__cabecera" src="../imagenes/comprobacion-medica-piernas-centro-fisioterapia.jpg" alt="">
+            <img class="imagen__principal__cabecera" src="../imagenes/comprobacion-medica-piernas-centro-fisioterapia.webp" alt="movilización tobillo">
             <div class="texto__imagen__contacto">
-                <h2> Complete el formulario y nos contactaremos a la brevedad</h2>
+                <h2 class="animate__animated animate__backInDown"> Complete el formulario </h2>
+                <br>
+                <br>
+                <br>
+                <h2 class="animate__animated animate__backInDown"> y nos comunicaremos a la brevedad</h2>
             </div>
+        </div>
+        <section data-aos="zoom-out-down" class="formulario__contacto">
+            <div class="formContacto" class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label"></label>
+                <input type="NombreyApellido" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label"></label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Deje su consulta</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
+            <div class="pie__imagenes formulario__ubicaciones">
+
+                <img src="https://tse4.mm.bing.net/th?id=OIP.363HIF5ekaMqqYj0Tmd3MwHaHa&pid=Api&P=0&h=180 " alt="img teléfono ">11-6570-9512
+                <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt="globo ubicación  ">Ñandubay 131,Ezeiza
+                <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt="globo ubicación  ">Sixto Fernandez 614,Lomas de Zamora
+            </div>
+
+        </section>
+
+    </main>
+    <footer>
+        <div class="pie_pagina__texto ">
+            <p>Brindamos un servicio y acompañamiento totalmente personalizado,<br> para que juntos podamos llegar a los objetivos buscados y tener una mejor calidad de vida.</p>
+        </div>
+
+        <div class="pie__imagenes ">
+            <img src="https://tse4.mm.bing.net/th?id=OIP.363HIF5ekaMqqYj0Tmd3MwHaHa&pid=Api&P=0&h=180 " alt=" ">11-6570-9512
+            <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt=" ">Ñandubay 131,Ezeiza
+            <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt=" ">Sixto Fernandez 614,Lomas de Zamora
+
+        </div>
+        <div class="pie__redes ">
+            <a href="# "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" ">instagram </a>
+            <a href="# "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 ">twiter</a>
         </div>
 
 
-    </main>
-    <footer class="pie__contacto">
-        <h4>todos los derechos reservados a Pablo Di Monte</h4>
     </footer>
+    <!--CDN BOOTSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <!--CDN AOS CSS-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
