--- a/desarrollo web/paginas/servicios.html
+++ b/desarrollo web/paginas/servicios.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>servicios</title>
-    <link rel="shortcut icon" href="../imagenes/logo_kios1.jpg" type="image/x-icon">
+    <meta name="keywords" content="kinesiología. osteopatia. reeducación postural. kinesiología on-line">
+    <meta name="description" content="servicio de tratamiento y recuperación de lesiones deportivas y traumatológicas">
+    <title>Servicios</title>
+
+    <link rel="shortcut icon" href="../imagenes/logo_kios1.webp" type="image/x-icon">
     <!-- fuentes de Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,32 +19,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
     <!-- cdn bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+    <!-- CDN AOS css-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!--CDN CSS STILE-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
     <main>
-        <header>
-            <a href="../index.html">
-                <img src="../imagenes/logo_kios1.jpg" alt="" id="logo_principal" </img>
-            </a>
-            <nav>
-                <ul class="navegacion">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./servicios.html">Servicios</a></li>
-                    <li><a href="./modalidad.html">Modalidad</a></li>
-                    <li><a href="./faqs.html">FAQ´s</a></li>
-                    <li> <a href="./contacto.html">Contacto</a></li>
-                </ul>
-
+        <header data-aos="fade-down">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <a href="../index.html">
+                    <img src="../imagenes/logo_kios1.webp" alt="" id="logo_principal" </img>
+                </a>
+                <div class="container-fluid ">
+                    <a class="navbar-brand" href="../index.html">Home</a>
+                    <a class="navbar-brand" href="./servicios.html">Servicios</a>
+                    <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
+                    <a class="navbar-brand" href="./faqs.html">Faq´s</a>
+                    <a class="navbar-brand" href="./contacto.html">Contacto</a>
+                </div>
             </nav>
         </header>
-        <h1>Nuestros Servicios</h1>
-        <img class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReOukvMnIfb6MStALMefov5fNAKNX5w-K_mA&usqp=CAU" alt="">
-        <h3 class="servicios__subtitulo">Kinesiología y Rehabilitación</h3>
+        <h1 data-aos="fade-down">Nuestros Servicios</h1>
+        <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReOukvMnIfb6MStALMefov5fNAKNX5w-K_mA&usqp=CAU" alt="">
+        <h3 data-aos="fade-right" class="servicios__subtitulo">Kinesiología y Rehabilitación</h3>
 
-        <section class="servicios__tratamientos">
+        <section data-aos="zoom-in" class="servicios__tratamientos">
             <div class="servicios__tratamientos__texto">
                 <p> La Kinesiología es la ciencia del movimiento. Su principal objetivo es promover, mantener y restaurar la salud y el bienestar de los pacientes a través de la aplicación de técnicas y terapias físicas. El kinesiólogo realiza una evaluación
                     exhaustiva de la condición física y las limitaciones de movimiento del paciente. Utiliza técnicas de evaluación clínica y pruebas funcionales para identificar el problema.Una vez que se ha realizado el diagnóstico, el kinesiólogo diseña
@@ -49,24 +54,20 @@
                 </p>
             </div>
 
-            <div class="servicios__tratamientos__imagenes">
+            <div data-aos="fade-left" class="servicios__tratamientos__imagenes">
                 <img class="rounded-circle" id="tto1" src="https://tse3.explicit.bing.net/th?id=OIP.vg-_OJKsqx4FHAAAramQDgHaE8&pid=Api&P=0" alt="">
                 <img class="rounded-circle" id="tto2" src="https://tse1.mm.bing.net/th?id=OIP.-nTbdw1kkLXt0eW-pqdOhgHaEc&pid=Api&P=0" alt="">
                 <img class="rounded-circle" id="tto3" src="https://tse1.mm.bing.net/th?id=OIP.-nTbdw1kkLXt0eW-pqdOhgHaEc&pid=Api&P=0" alt="">
             </div>
         </section>
 
-        <section class="servicios__tratamientos">
-
-            <div class="servicios__fisioterapia__imagen">
-                <img class="rounded" id="fisio1" src="https://tse1.mm.bing.net/th?id=OIP.vaCzrtgxKk9WpA31x7-dKgHaE8&pid=Api&P=0" alt="">
-                <img class="rounded" id="fisio2" src="https://tse1.explicit.bing.net/th?id=OIP.rG-xzGY2pQnXpzSi3cZY3QHaE8&pid=Api&P=0" alt="">
-                <img class="rounded" id="fisio3" src="https://tse1.explicit.bing.net/th?id=OIP.C6FXW2CgXGCTYK4B-vIK6wHaHa&pid=Api&P=0" alt="">
-            </div>
+        <section data-aos="zoom-in" class="servicios__tratamientos">
             <div class="servicios__fisioterapia__texto">
+                <br>
                 <h3>Fisioterapia</h3>
                 <div>
-                    <p>Contamos con fisioterapia de punta para el tratamiento de afecciones traumatológicas y deportivas</p>
+                    <p>Contamos con fisioterapia de punta para el tratamiento de afecciones traumatológicas y deportivas
+                    </p>
                     <div>
                         <ul>Contamos con:
                             <li>Magnetoterápia</li>
@@ -85,18 +86,24 @@
                     </div>
                 </div>
             </div>
+            <div class="servicios__fisioterapia__imagen">
+                <img class="rounded" id="fisio1" src="https://tse1.mm.bing.net/th?id=OIP.vaCzrtgxKk9WpA31x7-dKgHaE8&pid=Api&P=0" alt="">
+                <img class="rounded" id="fisio2" src="https://tse1.explicit.bing.net/th?id=OIP.rG-xzGY2pQnXpzSi3cZY3QHaE8&pid=Api&P=0" alt="">
+                <img class="rounded" id="fisio3" src="https://tse1.explicit.bing.net/th?id=OIP.C6FXW2CgXGCTYK4B-vIK6wHaHa&pid=Api&P=0" alt="">
+            </div>
 
         </section>
 
-        <h3 id="tratamiento__osteo">Tratamineto de Osteopatia</h3>
+        <h3 id="tratamiento__osteo">Tratamiento de Osteopatia</h3>
 
-        <section class="servicios__tratamientos">
+        <section data-aos="zoom-in" class="servicios__tratamientos">
             <div class="servicios__tratamientos__texto">
                 <p> La osteopatía es una forma de medicina alternativa que se centra en el diagnóstico y tratamiento de los trastornos musculoesqueléticos y otros problemas de salud relacionados. Su objetivo principal es restaurar la función normal del cuerpo
                     mediante técnicas manuales suaves.
                 </p>
                 <p>La osteopatía se basa en el principio de que el cuerpo tiene la capacidad innata de sanarse a sí mismo. Los osteópatas creen que muchos trastornos y enfermedades son el resultado de desequilibrios en el sistema musculoesquelético, que
-                    pueden afectar otros sistemas del cuerpo, como el sistema nervioso, el circulatorio y el respiratorio. Al corregir estos desequilibrios, se puede promover la curación y el bienestar general.</p>
+                    pueden afectar otros sistemas del cuerpo, como el sistema nervioso, el circulatorio y el respiratorio. Al corregir estos desequilibrios, se puede promover la curación y el bienestar general.
+                </p>
             </div>
 
             <div class="servicios__tratamientos__imagenes">
@@ -109,7 +116,7 @@
         </section>
         <div class="corte ">
             <div class="corte__imagen ">
-                <img class="imagen__principal__cabecera " src="https://tse2.mm.bing.net/th?id=OIP.LdwTLsN9ATah9woTyQpSgwHaE8&pid=Api&P=0&h=180 " alt=" ">
+                <img data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="imagen__principal__cabecera " src="https://tse2.mm.bing.net/th?id=OIP.LdwTLsN9ATah9woTyQpSgwHaE8&pid=Api&P=0&h=180 " alt=" ">
             </div>
             <div class="container " class="corte__texto ">
                 <div class="container " class="corte__texto__subtitulo ">
@@ -141,7 +148,11 @@
 
 
     </footer>
-
+    <!--CDN AOS CSS-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
