--- a/desarrollo web/index.html
+++ b/desarrollo web/index.html
@@ -29,11 +29,11 @@
 <body>
     <main>
         <header data-aos="fade-down">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary ">
                 <a href="./index.html">
                     <img src="../imagenes/logo_kios1.webp" alt="" id="logo_principal" </img>
                 </a>
-                <div class="container-fluid">
+                <div class="container-fluid barra_nav">
                     <a class="navbar-brand" href="./index.html">Home</a>
                     <a class="navbar-brand" href="./paginas/servicios.html">Servicios</a>
                     <a class="navbar-brand" href="./paginas/kine-online.html">Kine-online</a>
@@ -47,7 +47,7 @@
             <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGMEAQG8HoeRxU_Ok_GL0I0QM5XSJ0PjR_8g&usqp=CAU" alt="">
         </div>
         <div class="servicios">
-            <h1 data-aos="fade-down">NUESTROS SERVICIOS</h1>
+            <h1 id="h1home" data-aos="fade-down">NUESTROS SERVICIOS</h1>
             <div class="servicios">
                 <p id="servicios__parrafo"> Ofrecemos un concepto de atención basado en tres principios fundamentales</p>
             </div>
@@ -84,7 +84,7 @@
                         <li>Stress Pscicofísico</li>
                         <li>Trastornos digestivos: Gastritis,Colon Irritable</li>
                         <li>Trasnstornos del sueño,ansiedad </li>
-                        <a href="./paginas/faqs.html " class="btn btn-primary ">leer más</a>
+                        <a href="./paginas/faqs.html " class="btn btn-primary container__boton ">leer más</a>
                     </ul>
 
                 </div>
@@ -117,18 +117,21 @@
 
             <div class="cualidades ">
                 <div data-aos="fade-right " class="container " class="cualidad__divs ">
-                    <img class="rounded-circle " src="./imagenes/comprobacion-medica-piernas-centro-fisioterapia.webp " ">
-                    <h3 class="lead ">Profesionalismo</h3>
+                    <img class="rounded-circle imagen_cualidades " src="./imagenes/comprobacion-medica-piernas-centro-fisioterapia.webp " ">
+
+                    <h3 class="lead ">Profesionalismo</h3> <br>
                     <p>Apoyamos nuestras prácticas basado en la mejor evidencia cientifica disponible. Nos capacitamos constantemente para ofrecer la mejor atención a tu problema de salud</p>
                 </div>
                 <div data-aos="zoom-in" " class="container " class="cualidad__divs ">
-                    <img class="rounded-circle " src="./imagenes/cerca-fisioterapeuta-trabajando-paciente-clinica.webp " alt=" ">
-                    <h3 class="lead ">Compromiso</h3>
+                    <img class="rounded-circle imagen_cualidades " src="./imagenes/cerca-fisioterapeuta-trabajando-paciente-clinica.webp " alt=" ">
+                    
+                    <h3 class="lead ">Compromiso</h3> <br>
                     <p>Sabemos lo que te pasa.Nos comprometemos con tu problema y Ponemos a disposición todas nuestras herramientas para cumplir con tus necesitades</p>
                 </div>
                 <div data-aos="fade-left " class="container " class="cualidad__divs ">
-                    <img class="rounded-circle " src="./imagenes/bg-medicinainterna.png " alt=" ">
-                    <h3 class="lead ">Dedicación</h3>
+                    <img class="rounded-circle imagen_cualidades " src="./imagenes/bg-medicinainterna.png " alt=" ">
+                    
+                    <h3 class="lead ">Dedicación</h3><br>
                     <p>Amamos lo que hacemos y nuestra mayor gratificación es ver a nuestros pacientes lograr sus objetivos.</p>
                 </div>
             </div>
@@ -141,7 +144,7 @@
                     <h5 class="corte__texto__subtitulo " style="color:aliceblue ">Conozca más acerca de Kinesiología </h5>
                     <h5 class="corte__texto__subtitulo " style="color:aliceblue ">Conozca más acerca de Osteopatia</h5>
                     <h5 class="corte__texto__subtitulo " style="color: aliceblue; "> Conozca más acerca de Reeducación Postural</h5>
-                    <a href="# " class="btn btn-primary " role="button " data-bs-toggle="button "> leer más</a>
+                    <a href="# " class="btn btn-primary container__boton " role="button " data-bs-toggle="button "> leer más</a>
                 </div>
 
             </div>
