--- a/desarrollo web/paginas/contacto.html
+++ b/desarrollo web/paginas/contacto.html
@@ -32,7 +32,7 @@
                 <a href="../index.html">
                     <img src="../imagenes/logo_kios1.webp" alt="logo KIOS" id="logo_principal" </img>
                 </a>
-                <div class="container-fluid ">
+                <div class="container-fluid  barra_nav">
                     <a class="navbar-brand" href="../index.html">Home</a>
                     <a class="navbar-brand" href="./servicios.html">Servicios</a>
                     <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
