--- a/desarrollo web/paginas/faqs.html
+++ b/desarrollo web/paginas/faqs.html
@@ -32,7 +32,7 @@
                 <a href="../index.html">
                     <img src="../imagenes/logo_kios1.webp" alt="logo kios" id="logo_principal" </img>
                 </a>
-                <div class="container-fluid">
+                <div class="container-fluid barra_nav">
                     <a class="navbar-brand" href="../index.html">Home</a>
                     <a class="navbar-brand" href="./servicios.html">Servicios</a>
                     <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
@@ -45,7 +45,7 @@
         </header>
         <img data-aos="fade-down" class="imagen__principal__cabecera" src="../imagenes/bg-medicinainterna.png " alt="cambiar imagen " width=" ">
 
-        <h1 data-aos="fade-down">Que podemos tratar con la Osteopatia</h1>
+        <h1 class="h1faqs" data-aos="fade-down">Que podemos tratar con la Osteopatia</h1>
         <section class="tratamientos ">
             <article data-aos="zoom-in-down ">
                 <h4> ¿Puedo tratar la Cervicalgia con Osteopatia?</h4>
