--- a/desarrollo web/paginas/kine-online.html
+++ b/desarrollo web/paginas/kine-online.html
@@ -26,11 +26,11 @@
 <body>
     <main>
         <header data-aos="fade-down">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary ">
                 <a href="../index.html">
                     <img src="../imagenes/logo_kios1.webp" alt="" id="logo_principal" </img>
                 </a>
-                <div class="container-fluid">
+                <div class="container-fluid barra_nav">
                     <a class="navbar-brand" href="../index.html">Home</a>
                     <a class="navbar-brand" href="./servicios.html">Servicios</a>
                     <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
@@ -40,7 +40,7 @@
             </nav>
 
         </header>
-        <h1 data-aos="fade-down">Que es Kine-online ?</h1>
+        <h1 id="h1kine" data-aos="fade-down">Que es Kine-online ?</h1>
         <p class="onlinep">Kinesiología Online es un nuevo servicio donde usted podrá realizar una sesión de kinesiología integral a través de una video llamada utilizando la plataforma Teams.
         </p>
         <section class="servicios__tratamientos">
@@ -62,9 +62,9 @@
 
             <div class="servicios__tratamientos__texto__online">
                 <p>Junto con los antecedentes clínicos y la encuesta que debe completar el paciente, se realizará durante la primera sesión, una evaluación kinésica y en ésta, el kinesiólogo concluirá con un diagnostico kinésico, el cual va a obtener solicitando
-                    la realización de pruebas clínicas, funcionales y la evaluación del movimiento en distintas tareas atingentes al cuadro clínico.</p>
-                <p>Una vez finalizada la evaluación, el kinesiólogo prescribirá y controlará los ejercicios terapéuticos indicados para el manejo de la patología y los hallazgos encontrados. Además, este servicio incluye la entrega de información, educación
-                    y recomendaciones relacionadas con el cuadro clínico. Este servicio requiere contar siempre con una orden médica.</p>
+                    la realización de pruebas clínicas, funcionales y la evaluación del movimiento en distintas tareas atingentes al cuadro clínico. <br> Una vez finalizada la evaluación, el kinesiólogo prescribirá y controlará los ejercicios terapéuticos
+                    indicados para el manejo de la patología y los hallazgos encontrados. Además, este servicio incluye la entrega de información, educación y recomendaciones relacionadas con el cuadro clínico. Este servicio requiere contar siempre con
+                    una orden médica.</p>
             </div>
         </section>
         <h2 class="onlinep"> Acceder a la Consulta de kine-online </h2>
