--- a/desarrollo web/paginas/servicios.html
+++ b/desarrollo web/paginas/servicios.html
@@ -31,19 +31,18 @@
         <header data-aos="fade-down">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <a href="../index.html">
-                    <img src="../imagenes/logo_kios1.webp" alt="" id="logo_principal" </img>
-                </a>
-                <div class="container-fluid ">
-                    <a class="navbar-brand" href="../index.html">Home</a>
-                    <a class="navbar-brand" href="./servicios.html">Servicios</a>
-                    <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
-                    <a class="navbar-brand" href="./faqs.html">Faq´s</a>
-                    <a class="navbar-brand" href="./contacto.html">Contacto</a>
-                </div>
+                    <img src="../imagenes/logo_kios1.webp" alt="" id="logo_principal" </a>
+                    <div class="container-fluid  barra_nav">
+                        <a class="navbar-brand" href="../index.html">Home</a>
+                        <a class="navbar-brand" href="./servicios.html">Servicios</a>
+                        <a class="navbar-brand" href="./kine-online.html">Kine-online</a>
+                        <a class="navbar-brand" href="./faqs.html">Faq´s</a>
+                        <a class="navbar-brand" href="./contacto.html">Contacto</a>
+                    </div>
             </nav>
         </header>
-        <h1 data-aos="fade-down">Nuestros Servicios</h1>
         <img data-aos="fade-down" class="imagen__principal__cabecera" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReOukvMnIfb6MStALMefov5fNAKNX5w-K_mA&usqp=CAU" alt="">
+        <h1 data-aos="fade-down">Nuestros Servicios</h1>
         <h3 data-aos="fade-right" class="servicios__subtitulo">Kinesiología y Rehabilitación</h3>
 
         <section data-aos="zoom-in" class="servicios__tratamientos">
@@ -54,7 +53,7 @@
                 </p>
             </div>
 
-            <div data-aos="fade-left" class="servicios__tratamientos__imagenes">
+            <div data-aos="fade-down" class="servicios__tratamientos__imagenes">
                 <img class="rounded-circle" id="tto1" src="https://tse3.explicit.bing.net/th?id=OIP.vg-_OJKsqx4FHAAAramQDgHaE8&pid=Api&P=0" alt="">
                 <img class="rounded-circle" id="tto2" src="https://tse1.mm.bing.net/th?id=OIP.-nTbdw1kkLXt0eW-pqdOhgHaEc&pid=Api&P=0" alt="">
                 <img class="rounded-circle" id="tto3" src="https://tse1.mm.bing.net/th?id=OIP.-nTbdw1kkLXt0eW-pqdOhgHaEc&pid=Api&P=0" alt="">
@@ -63,27 +62,28 @@
 
         <section data-aos="zoom-in" class="servicios__tratamientos">
             <div class="servicios__fisioterapia__texto">
-                <br>
                 <h3>Fisioterapia</h3>
+                <p>Contamos con fisioterapia de punta para el tratamiento de afecciones traumatológicas y deportivas</p>
                 <div>
-                    <p>Contamos con fisioterapia de punta para el tratamiento de afecciones traumatológicas y deportivas
-                    </p>
-                    <div>
-                        <ul>Contamos con:
-                            <li>Magnetoterápia</li>
-                            <ul>termoterapia
-                                <li>Hotpack</li>
-                                <li>críoterapia</li>
-                            </ul>
-                            <ul>Eléctroterapia
-                                <li>Corrientes Rusas</li>
-                                <li>Corrientes Interferenciales</li>
-                                <li>Corrientes Analgésicas</li>
-                            </ul>
-                            <li>ultrasonido</li>
-                            <li>Mep (Microelectrólisis Pércutanea)</li>
+                    <ul>Contamos con:
+                        <li>Magnetoterápia</li>
+
+                        <li>termoterapia</li>
+                        <ul>
+                            <li>críoterapia</li>
+                            <li>Hotpack</li>
                         </ul>
-                    </div>
+
+                        <li>Eléctroterapia</li>
+                        <ul>
+                            <li>Corrientes Rusas</li>
+                            <li>Corrientes Interferenciales</li>
+                            <li>Corrientes Analgésicas</li>
+                        </ul>
+
+                        <li>ultrasonido</li>
+                        <li>Mep (Microelectrólisis Pércutanea)</li>
+                    </ul>
                 </div>
             </div>
             <div class="servicios__fisioterapia__imagen">
@@ -99,10 +99,8 @@
         <section data-aos="zoom-in" class="servicios__tratamientos">
             <div class="servicios__tratamientos__texto">
                 <p> La osteopatía es una forma de medicina alternativa que se centra en el diagnóstico y tratamiento de los trastornos musculoesqueléticos y otros problemas de salud relacionados. Su objetivo principal es restaurar la función normal del cuerpo
-                    mediante técnicas manuales suaves.
-                </p>
-                <p>La osteopatía se basa en el principio de que el cuerpo tiene la capacidad innata de sanarse a sí mismo. Los osteópatas creen que muchos trastornos y enfermedades son el resultado de desequilibrios en el sistema musculoesquelético, que
-                    pueden afectar otros sistemas del cuerpo, como el sistema nervioso, el circulatorio y el respiratorio. Al corregir estos desequilibrios, se puede promover la curación y el bienestar general.
+                    mediante técnicas manuales. <br> La osteopatía se basa en el principio de que el cuerpo tiene la capacidad innata de sanarse a sí mismo. Los osteópatas creen que muchos trastornos y enfermedades son el resultado de desequilibrios en
+                    el sistema musculoesquelético, que pueden afectar otros sistemas del cuerpo, como el sistema nervioso, el circulatorio y el respiratorio. Al corregir estos desequilibrios, se puede promover la curación y el bienestar general.
                 </p>
             </div>
 
