proyecto_final_corregido

--- a/desarrollo web/paginas/contacto.html
+++ b/desarrollo web/paginas/contacto.html
@@ -52,7 +52,7 @@
                 <h2 class="animate__animated animate__backInDown"> y nos comunicaremos a la brevedad</h2>
             </div>
         </div>
-        <section data-aos="zoom-out-down" class="formulario__contacto">
+        <section data-aos="fade-down" class="formulario__contacto">
             <div class="formContacto" class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label"></label>
                 <input type="NombreyApellido" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
