proyecto_web_terminado

--- a/desarrollo web/index.html
+++ b/desarrollo web/index.html
@@ -163,8 +163,8 @@
                 <img src="https://tse4.mm.bing.net/th?id=OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa&pid=Api&P=0&h=180 " alt=" ">Sixto Fernandez 614,Lomas de Zamora
             </div>
             <div class="pie__redes ">
-                <a href="# "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" ">instagram </a>
-                <a href="# "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 ">twiter</a>
+                <a href="https://www.instagram.com/ "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt="logo instagram ">instagram </a>
+                <a href="https://twitter.com/ "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter ">twiter</a>
             </div>
 
 
