--- a/desarrollo web/paginas/faqs.html
+++ b/desarrollo web/paginas/faqs.html
@@ -143,8 +143,8 @@
         </div>
 
         <div class="pie__redes ">
-            <a href="# "><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" logo instagram">instagram </a>
-            <a href="# "><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter">twiter</a>
+            <a href="https://www.instagram.com/"><img src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180 " alt=" logo instagram">instagram </a>
+            <a href="https://twitter.com/"><img src="https://tse3.mm.bing.net/th?id=OIP.AdzhkXtdEuGDv94QoKVmaAHaHa&pid=Api&P=0&h=180 " alt="logo twiter">twiter</a>
         </div>
 
 
